@@ -34,6 +34,10 @@ specification of $ISABELLE_HOME_USER/ROOTS or command-line options like
 
 * Completion supports theory header imports.
 
+* The "isabelle jedit" command-line options -B or -P modify the meaning
+of -l to produce an image on the spot or use the session parent image.
+Option -R now only opens the session ROOT entry.
+
 
 *** HOL ***
 
